--- a/quiz.html
+++ b/quiz.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Political Concepts Quiz</title>
+    <title>American Election Quiz</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -57,39 +57,257 @@
 </head>
 <body>
     <div class="container">
-        <h1>Political Concepts Quiz</h1>
+        <h1>American Election Quiz</h1>
         <form id="quizForm">
             <div class="question">
-                <p>1. What is the main purpose of a constitution?</p>
-                <label><input type="radio" name="q1" value="a"> a) To establish laws</label>
-                <label><input type="radio" name="q1" value="b"> b) To create a government</label>
-                <label><input type="radio" name="q1" value="c"> c) To protect individual rights</label>
-                <label><input type="radio" name="q1" value="d"> d) All of the above</label>
+                <p>1. What is the minimum age required to vote in a U.S. federal election?</p>
+                <label><input type="radio" name="q1" value="a"> a) 16</label>
+                <label><input type="radio" name="q1" value="b"> b) 18</label>
+                <label><input type="radio" name="q1" value="c"> c) 21</label>
+                <label><input type="radio" name="q1" value="d"> d) 25</label>
             </div>
             <div class="question">
-                <p>2. What is the term for the division of government into three branches?</p>
-                <label><input type="radio" name="q2" value="a"> a) Checks and Balances</label>
-                <label><input type="radio" name="q2" value="b"> b) Federalism</label>
-                <label><input type="radio" name="q2" value="c"> c) Separation of Powers</label>
-                <label><input type="radio" name="q2" value="d"> d) Judicial Review</label>
+                <p>2. How many electoral votes does a candidate need to win the presidency?</p>
+                <label><input type="radio" name="q2" value="a"> a) 200</label>
+                <label><input type="radio" name="q2" value="b"> b) 270</label>
+                <label><input type="radio" name="q2" value="c"> c) 300</label>
+                <label><input type="radio" name="q2" value="d"> d) 538</label>
             </div>
             <div class="question">
-                <p>3. Which amendment abolished slavery in the United States?</p>
-                <label><input type="radio" name="q3" value="a"> a) 13th Amendment</label>
-                <label><input type="radio" name="q3" value="b"> b) 14th Amendment</label>
-                <label><input type="radio" name="q3" value="c"> c) 15th Amendment</label>
-                <label><input type="radio" name="q3" value="d"> d) 16th Amendment</label>
+                <p>3. Which month is traditionally set for U.S. presidential elections?</p>
+                <label><input type="radio" name="q3" value="a"> a) October</label>
+                <label><input type="radio" name="q3" value="b"> b) November</label>
+                <label><input type="radio" name="q3" value="c"> c) December</label>
+                <label><input type="radio" name="q3" value="d"> d) January</label>
             </div>
+            <div class="question">
+                <p>4. Which amendment granted women the right to vote?</p>
+                <label><input type="radio" name="q4" value="a"> a) 15th Amendment</label>
+                <label><input type="radio" name="q4" value="b"> b) 19th Amendment</label>
+                <label><input type="radio" name="q4" value="c"> c) 20th Amendment</label>
+                <label><input type="radio" name="q4" value="d"> d) 22nd Amendment</label>
+            </div>
+            <div class="question">
+                <p>5. Who is eligible to vote in the upcoming U.S. election?</p>
+                <label><input type="radio" name="q5" value="a"> a) Any resident of the U.S.</label>
+                <label><input type="radio" name="q5" value="b"> b) Any citizen over 21</label>
+                <label><input type="radio" name="q5" value="c"> c) U.S. citizens 18 and older</label>
+                <label><input type="radio" name="q5" value="d"> d) Only taxpayers</label>
+            </div>
+            <div class="question">
+                <p>6. How often are U.S. presidential elections held?</p>
+                <label><input type="radio" name="q6" value="a"> a) Every 2 years</label>
+                <label><input type="radio" name="q6" value="b"> b) Every 4 years</label>
+                <label><input type="radio" name="q6" value="c"> c) Every 6 years</label>
+                <label><input type="radio" name="q6" value="d"> d) Every 8 years</label>
+            </div>
+            <div class="question">
+                <p>7. Who officially confirms the results of the presidential election?</p>
+                <label><input type="radio" name="q7" value="a"> a) The Vice President</label>
+                <label><input type="radio" name="q7" value="b"> b) The Speaker of the House</label>
+                <label><input type="radio" name="q7" value="c"> c) The Supreme Court</label>
+                <label><input type="radio" name="q7" value="d"> d) The Electoral College</label>
+            </div>
+            <div class="question">
+                <p>8. How many U.S. Senators are elected during each general election?</p>
+                <label><input type="radio" name="q8" value="a"> a) 50</label>
+                <label><input type="radio" name="q8" value="b"> b) 33 or 34</label>
+                <label><input type="radio" name="q8" value="c"> c) 100</label>
+                <label><input type="radio" name="q8" value="d"> d) 25</label>
+            </div>
+            <div class="question">
+                <p>9. Which U.S. state holds the first primary in the election cycle?</p>
+                <label><input type="radio" name="q9" value="a"> a) Iowa</label>
+                <label><input type="radio" name="q9" value="b"> b) New Hampshire</label>
+                <label><input type="radio" name="q9" value="c"> c) South Carolina</label>
+                <label><input type="radio" name="q9" value="d"> d) Nevada</label>
+            </div>
+            <div class="question">
+                <p>10. Who can serve as a poll worker in the upcoming election?</p>
+                <label><input type="radio" name="q10" value="a"> a) Only government officials</label>
+                <label><input type="radio" name="q10" value="b"> b) Anyone registered to vote</label>
+                <label><input type="radio" name="q10" value="c"> c) U.S. citizens 16 and older</label>
+                <label><input type="radio" name="q10" value="d"> d) Only elected officials</label>
+            </div>
+            <div class="question">
+                <p>11. What is the purpose of a primary election?</p>
+                <label><input type="radio" name="q11" value="a"> a) To select party nominees</label>
+                <label><input type="radio" name="q11" value="b"> b) To elect local officials</label>
+                <label><input type="radio" name="q11" value="c"> c) To propose new laws</label>
+                <label><input type="radio" name="q11" value="d"> d) To amend the constitution</label>
+            </div>
+            <div class="question">
+                <p>12. Who was the first African American elected to the U.S. presidency?</p>
+                <label><input type="radio" name="q12" value="a"> a) Barack Obama</label>
+                <label><input type="radio" name="q12" value="b"> b) Colin Powell</label>
+                <label><input type="radio" name="q12" value="c"> c) Clarence Thomas</label>
+                <label><input type="radio" name="q12" value="d"> d) Jesse Jackson</label>
+            </div>
+            <div class="question">
+                <p>13. How many U.S. representatives are up for election every two years?</p>
+                <label><input type="radio" name="q13" value="a"> a) 100</label>
+                <label><input type="radio" name="q13" value="b"> b) 435</label>
+                <label><input type="radio" name="q13" value="c"> c) 50</label>
+                <label><input type="radio" name="q13" value="d"> d) 218</label>
+            </div>
+            <div class="question">
+                <p>14. What is the age requirement to be elected President of the United States?</p>
+                <label><input type="radio" name="q14" value="a"> a) 30</label>
+                <label><input type="radio" name="q14" value="b"> b) 35</label>
+                <label><input type="radio" name="q14" value="c"> c) 40</label>
+                <label><input type="radio" name="q14" value="d"> d) 45</label>
+            </div>
+            <div class="question">
+                <p>15. Which political party currently holds the majority in the U.S. Senate?</p>
+                <label><input type="radio" name="q15" value="a"> a) Republican Party</label>
+                <label><input type="radio" name="q15" value="b"> b) Democratic Party</label>
+                <label><input type="radio" name="q15" value="c"> c) Green Party</label>
+                <label><input type="radio" name="q15" value="d"> d) Libertarian Party</label>
+            </div>
+            <div class="question">
+                <p>16. When does a U.S. president’s term officially begin?</p>
+                <label><input type="radio" name="q16" value="a"> a) January 1st</label>
+                <label><input type="radio" name="q16" value="b"> b) January 20th</label>
+                <label><input type="radio" name="q16" value="c"> c) February 1st</label>
+                <label><input type="radio" name="q16" value="d"> d) March 4th</label>
+            </div>
+            <div class="question">
+                <p>17. What is the main role of the Electoral College?</p>
+                <label><input type="radio" name="q17" value="a"> a) To create laws</label>
+                <label><input type="radio" name="q17" value="b"> b) To directly elect the president</label>
+                <label><input type="radio" name="q17" value="c"> c) To choose candidates</label>
+                <label><input type="radio" name="q17" value="d"> d) To resolve legal disputes</label>
+            </div>
+            <div class="question">
+                <p>18. How many terms can a U.S. president serve?</p>
+                <label><input type="radio" name="q18" value="a"> a) 1</label>
+                <label><input type="radio" name="q18" value="b"> b) 2</label>
+                <label><input type="radio" name="q18" value="c"> c) 3</label>
+                <label><input type="radio" name="q18" value="d"> d) Unlimited</label>
+            </div>
+            <div class="question">
+                <p>19. Who appoints Supreme Court justices?</p>
+                <label><input type="radio" name="q19" value="a"> a) The President</label>
+                <label><input type="radio" name="q19" value="b"> b) The Senate</label>
+                <label><input type="radio" name="q19" value="c"> c) The House of Representatives</label>
+                <label><input type="radio" name="q19" value="d"> d) The Chief Justice</label>
+            </div>
+            <div class="question">
+                <p>20. Which amendment lowered the voting age to 18?</p>
+                <label><input type="radio" name="q20" value="a"> a) 14th Amendment</label>
+                <label><input type="radio" name="q20" value="b"> b) 15th Amendment</label>
+                <label><input type="radio" name="q20" value="c"> c) 19th Amendment</label>
+                <label><input type="radio" name="q20" value="d"> d) 26th Amendment</label>
+            </div>
+            <div class="question">
+                <p>21. Who becomes president if both the president and vice president can no longer serve?</p>
+                <label><input type="radio" name="q21" value="a"> a) The Secretary of State</label>
+                <label><input type="radio" name="q21" value="b"> b) The Speaker of the House</label>
+                <label><input type="radio" name="q21" value="c"> c) The Senate Majority Leader</label>
+                <label><input type="radio" name="q21" value="d"> d) The Attorney General</label>
+            </div>
+            <div class="question">
+                <p>22. Which political party has an elephant as its symbol?</p>
+                <label><input type="radio" name="q22" value="a"> a) Democratic Party</label>
+                <label><input type="radio" name="q22" value="b"> b) Republican Party</label>
+                <label><input type="radio" name="q22" value="c"> c) Green Party</label>
+                <label><input type="radio" name="q22" value="d"> d) Libertarian Party</label>
+            </div>
+            <div class="question">
+                <p>23. What term is used for the candidate who currently holds an office and is running for re-election?</p>
+                <label><input type="radio" name="q23" value="a"> a) Nominee</label>
+                <label><input type="radio" name="q23" value="b"> b) Incumbent</label>
+                <label><input type="radio" name="q23" value="c"> c) Challenger</label>
+                <label><input type="radio" name="q23" value="d"> d) Elector</label>
+            </div>
+            <div class="question">
+                <p>24. Who is the highest-ranking officer in the U.S. House of Representatives?</p>
+                <label><input type="radio" name="q24" value="a"> a) The Vice President</label>
+                <label><input type="radio" name="q24" value="b"> b) The Speaker of the House</label>
+                <label><input type="radio" name="q24" value="c"> c) The Majority Whip</label>
+                <label><input type="radio" name="q24" value="d"> d) The Chief Justice</label>
+            </div>
+            <div class="question">
+                <p>25. What type of voting allows citizens to cast their vote without being present at a polling place?</p>
+                <label><input type="radio" name="q25" value="a"> a) Primary voting</label>
+                <label><input type="radio" name="q25" value="b"> b) Early voting</label>
+                <label><input type="radio" name="q25" value="c"> c) Absentee voting</label>
+                <label><input type="radio" name="q25" value="d"> d) Exit polling</label>
+            </div>
+            <div class="question">
+                <p>26. What is the main purpose of a political debate?</p>
+                <label><input type="radio" name="q26" value="a"> a) To draft new laws</label>
+                <label><input type="radio" name="q26" value="b"> b) To let candidates present their views</label>
+                <label><input type="radio" name="q26" value="c"> c) To elect party leaders</label>
+                <label><input type="radio" name="q26" value="d"> d) To register voters</label>
+            </div>
+            <div class="question">
+                <p>27. What is a swing state?</p>
+                <label><input type="radio" name="q27" value="a"> a) A state with no electoral votes</label>
+                <label><input type="radio" name="q27" value="b"> b) A state with equal numbers of Democrats and Republicans</label>
+                <label><input type="radio" name="q27" value="c"> c) A state that could be won by either major party</label>
+                <label><input type="radio" name="q27" value="d"> d) A state that has only one party candidate</label>
+            </div>
+            <div class="question">
+                <p>28. What is the role of the media in elections?</p>
+                <label><input type="radio" name="q28" value="a"> a) To create laws</label>
+                <label><input type="radio" name="q28" value="b"> b) To provide news and information to voters</label>
+                <label><input type="radio" name="q28" value="c"> c) To determine electoral votes</label>
+                <label><input type="radio" name="q28" value="d"> d) To control political parties</label>
+            </div>
+            <div class="question">
+                <p>29. Which state has the most electoral votes in the Electoral College?</p>
+                <label><input type="radio" name="q29" value="a"> a) Texas</label>
+                <label><input type="radio" name="q29" value="b"> b) California</label>
+                <label><input type="radio" name="q29" value="c"> c) Florida</label>
+                <label><input type="radio" name="q29" value="d"> d) New York</label>
+            </div>
+            <div class="question">
+                <p>30. How many justices serve on the U.S. Supreme Court?</p>
+                <label><input type="radio" name="q30" value="a"> a) 7</label>
+                <label><input type="radio" name="q30" value="b"> b) 8</label>
+                <label><input type="radio" name="q30" value="c"> c) 9</label>
+                <label><input type="radio" name="q30" value="d"> d) 10</label>
+            </div>
+            
             <button type="button" id="submitBtn">Submit</button>
         </form>
         <div id="result" class="result"></div>
     </div>
     <script>
         const correctAnswers = {
-            q1: "d",
-            q2: "c",
-            q3: "a"
+            q1: "c",
+            q2: "a",
+            q3: "d",
+            q4: "c",
+            q5: "a",
+            q6: "b",
+            q7: "c",
+            q8: "a",
+            q9: "d",
+            q10: "b",
+            q11: "a",
+            q12: "b",
+            q13: "a",
+            q14: "d",
+            q15: "c",
+            q16: "b",
+            q17: "b",
+            q18: "b",
+            q19: "a",
+            q20: "d",
+            q21: "b",
+            q22: "b",
+            q23: "b",
+            q24: "b",
+            q25: "c",
+            q26: "b",
+            q27: "c",
+            q28: "b",
+            q29: "b",
+            q30: "c"
         };
+
 
         document.getElementById("submitBtn").addEventListener("click", () => {
             let score = 0;
