--- a/index.html
+++ b/index.html
@@ -143,6 +143,9 @@
         <ul class="nav-links">
             <li><a href="index.html">Home</a></li>
             <li><a href="index.html#resources">Resources</a></li>
+            <li><a href="events.html">Events</a></li>
+            <li><a href="research.html">Research</a></li>
+            <li><a href="vote.html">Vote</a></li>
         </ul>
     </nav>
 
